--- a/contacto.html
+++ b/contacto.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Comprá online con las mejores ofertas, promociones y descuentos en supermercados todas las semanas. Envíos a domicilio dentro de las 24 horas.
+    <meta name="description" content="Compra online con las mejores ofertas, promociones y descuentos en supermercados todas las semanas. Envíos a domicilio dentro de las 24 horas.
   ">
+  <link rel="icon" type="image/png" href="./imagenes/fondo pantalla 2.jpg">
+
     <title>Contacto</title>
 
 
@@ -47,12 +49,14 @@
         Horarios: Atención: Lunes a Sábados de 8 a 20 hs. Domingos y Feriados: 9 a 20 hs. Supermercado Sc desde el 01/12
         hasta fin de Febrero abre de 08 a 22 hs. (22; 23; 29 y 30 de 08 a 23 hs). Los dias 24 y 31 hasta las 18 hs. 25 y
         01 Cerrado. Domingos y feriados de 9 a 21 hs.</p>
-    <iframe
+    <div class="mapa">
+        <iframe
         src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13125.047664376343!2d-58.61153344999999!3d-34.67333855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1673073957306!5m2!1ses!2sar"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-        <form class="row">
+    </div>
+    <div class="formulario">
+        <form class="row ">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre"><br>
           
@@ -65,6 +69,7 @@
             <button type="submit">Enviar</button>
             <button type="reset">Eliminar</button>
           </form>
+        </div>
           
     <footer class="text-center bordeFooter">
         <h3>Todos los Derechos Reservados</h3>
