--- a/descuentos.html
+++ b/descuentos.html
@@ -55,12 +55,12 @@
             C.F.T. 0,00% CON IVA Y SIN IVA</p>
         <div class="row container ">
 
-            <img src="./imagenes/imagen-promo-tarjetas1.jpg" alt="Promociones bancarias">
-            <img src="./imagenes/imagen-promo-tarjetas2.jpg" alt="Promociones bancarias">
-            <img src="./imagenes/imagen-promo-tarjetas3.jpg" alt="Promociones Bancarias">
-            <img src="./imagenes/imagen-promo-tarjetas4.jpg" alt="Promociones Bancarias">
+            <img  class="imagenContainer" src="./imagenes/imagen-promo-tarjetas1.jpg" alt="Promociones bancarias">
+            <img  class="imagenContainer" src="./imagenes/imagen-promo-tarjetas2.jpg" alt="Promociones bancarias">
+            <img  class="imagenContainer" src="./imagenes/imagen-promo-tarjetas3.jpg" alt="Promociones Bancarias">
+            <img  class="imagenContainer" src="./imagenes/imagen-promo-tarjetas4.jpg" alt="Promociones Bancarias">
 
-            <img src="./imagenes/imagen-promo-tarjetas5.jpg" alt="Promociones Bancarias">
+            <img class="imagenContainer" src="./imagenes/imagen-promo-tarjetas5.jpg" alt="Promociones Bancarias">
         </div>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/FvKElNMD7GA" title="YouTube video player"
