--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Comprá online con las mejores ofertas, promociones y descuentos en supermercados todas las semanas. Envíos a domicilio dentro de las 24 horas.
   ">
+  <link rel="icon" type="image/png" href="./imagenes/fondo pantalla 2.jpg">
+
 
   <title>Supermercado SC</title>
 
@@ -21,9 +23,6 @@
 </head>
 
 <body>
-  <a href="index.html">
-    <img src="./imagenes/fondo pantalla 2.jpg" alt="Icono" style="position: fixed; top: 0; left: 0; width: 50px; height: 50px;">
-  </a>
   
   <header>
     <h1 class="text-center animate__animated animate__fadeInLeftBig">Mi Super Online</h1>
