--- a/ofertas.html
+++ b/ofertas.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Comprá online con las mejores ofertas, promociones y descuentos en supermercados todas las semanas. Envíos a domicilio dentro de las 24 horas.
   ">
+  <link rel="icon" type="image/png" href="./imagenes/fondo pantalla 2.jpg">
+
   <title>Ofertas</title>
 
 
