--- a/productos.html
+++ b/productos.html
@@ -39,108 +39,129 @@
             pescados y vegetales, pastas secas, arroz, fideos de todo tipo, legumbres, harinas ¡Y mucho más! La
             alimentación es importante para una vida saludable. Encontrá todo lo que necesites en Mi Tienda Online.</p>
 
-        <div class="row margenImagen">
-            <div class="card margenImagen" style="width: 18rem;">
-                <img src="./imagenes/asado de novillito.webp" class="card-img-top" alt="asado">
-                <div class="card-body">
-                    <h5 class="card-title">Asado de Novillo</h5>
-                    <p class="card-text">$1699.00</p>
-                    <a href="#" class="btn btn-primary">Añadir al Carrito </a>
+        <main>
+            <div class="row margenImagen">
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card" style="width: 100%;">
+                        <img src="./imagenes/asado de novillito.webp" class="card-img-top" alt="asado">
+                        <div class="card-body">
+                            <h5 class="card-title">Asado de Novillo</h5>
+                            <p class="card-text">$1699.00</p>
+                            <a href="#" class="btn btn-primary">Añadir al Carrito </a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="card margenImagen " style="width: 18rem;">
-                <img src="./imagenes/azucaf.jpg" class="card-img-top" alt="azucar">
-                <div class="card-body">
-                    <h5 class="card-title">Azucar ledesma</h5>
-                    <p class="card-text ">$203.99 </p>
-                    <a href="#" class=" btn btn-primary  ">Añadir al Carrito </a>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card" style="width: 100%;">
+                        <img src="./imagenes/azucaf.jpg" class="card-img-top" alt="azucar">
+                        <div class="card-body">
+                            <h5 class="card-title">Azucar ledesma</h5>
+                            <p class="card-text ">$203.99 </p>
+                            <a href="#" class=" btn btn-primary  ">Añadir al Carrito </a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="card margenImagen " style="width: 18rem;">
-                <img src="./imagenes/coca 225lts.webp" class="card-img-top" alt="coca cola">
-                <div class="card-body">
-                    <h5 class="card-title">Coca Cola sin azucar2.25lts </h5>
-                    <p class="card-text">$529.00 </p>
-                    <a href="#" class="btn btn-primary">Añadir al Carrito </a>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card" style="width: 100%;">
+                        <img src="./imagenes/coca 225lts.webp" class="card-img-top" alt="coca cola">
+                        <div class="card-body">
+                            <h5 class="card-title">Coca Cola sin azucar2.25lts </h5>
+                            <p class="card-text">$529.00 </p>
+                            <a href="#" class="btn btn-primary">Añadir al Carrito </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card" style="width: 100%;">
+                        <img src="./imagenes/coca original 225lts.webp" class="card-img-top" alt="coca cola 2.25lts">
+                        <div class="card-body">
+                            <h5 class="card-title">Coca sabor original 2.25lts </h5>
+                            <p class="card-text">$502.00</p>
+                            <a href="#" class="btn btn-primary">Añadir al Carrito </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card" style="width: 100%;">
+                        <img src="./imagenes/leche casanto.webp" class="card-img-top" alt="leche casanto">
+                        <div class="card-body">
+                            <h5 class="card-title">Leche Casanto x 1 litro</h5>
+                            <p class="card-text">$199.00</p>
+                            <a href="#" class="btn btn-primary">Añadir al Carrito</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4 mb-4">
+                    <div class="card" style="width: 100%;">
+                        <img src="./imagenes/pasta de dientes.jpg" class="card-img-top" alt="pasta dental">
+                        <div class="card-body">
+                            <h5 class="card-title">Pasta dental Colgate</h5>
+                            <p class="card-text">$279.00</p>
+                            <a href="#" class="btn btn-primary">Añadir al Carrito</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card" style="width: 100%;">
+                        <img src="./imagenes/pure de tomate.webp" class="card-img-top" alt="pure de tomate">
+                        <div class="card-body">
+                            <h5 class="card-title">Pure de tomate/h5>
+                                <p class="card-text">$189.00</p>
+                                <a href="#" class="btn btn-primary">Añadir al Carrito</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card" style="width: 100%;">
+                        <img src="./imagenes/pure en lata.webp" class="card-img-top" alt="pure en lata">
+                        <div class="card-body">
+                            <h5 class="card-title">Pure de tomate en Lata</h5>
+                            <p class="card-text">$205.00</p>
+                            <a href="#" class="btn btn-primary">Añadir al Carrito</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card" style="width: 100%;">
+                        <img src="./imagenes/vino tinto elementos.webp" class="card-img-top" alt="Vino tinto">
+                        <div class="card-body">
+                            <h5 class="card-title">Vino tinto</h5>
+                            <p class="card-text">$1299.00 </p>
+                            <a href="#" class="btn btn-primary">Añadir al Carrito</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card" style="width: 100%;">
+                        <img src="./imagenes/yogut de frutilla.webp" class="card-img-top" alt="yogurt frutilla">
+                        <div class="card-body">
+                            <h5 class="card-title">Yogurt sabor Frutilla</h5>
+                            <p class="card-text">$339.00</p>
+                            <a href="#" class=" btn btn-primary ">Añadir al Carrito</a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="card margenImagen " style="width: 18rem;">
-                <img src="./imagenes/coca original 225lts.webp" class="card-img-top" alt="coca cola 2.25lts">
-                <div class="card-body">
-                    <h5 class="card-title">Coca sabor original 2.25lts </h5>
-                    <p class="card-text">$502.00</p>
-                    <a href="#" class="btn btn-primary">Añadir al Carrito </a>
-                </div>
-            </div>
-
-            <div class="card margenImagen" style="width: 18rem;">
-                <img src="./imagenes/leche casanto.webp" class="card-img-top" alt="leche casanto">
-                <div class="card-body">
-                    <h5 class="card-title">Leche Casanto x 1 litro</h5>
-                    <p class="card-text">$199.00</p>
-                    <a href="#" class="btn btn-primary">Añadir al Carrito</a>
-                </div>
-            </div>
-            <div class="card margenImagen " style="width: 18rem;">
-                <img src="./imagenes/pasta de dientes.jpg" class="card-img-top" alt="pasta dental">
-                <div class="card-body">
-                    <h5 class="card-title">Pasta dental Colgate</h5>
-                    <p class="card-text">$279.00</p>
-                    <a href="#" class="btn btn-primary">Añadir al Carrito</a>
-                </div>
-            </div>
-            <div class="card margenImagen " style="width: 18rem;">
-                <img src="./imagenes/pure de tomate.webp" class="card-img-top" alt="pure de tomate">
-                <div class="card-body">
-                    <h5 class="card-title">Pure de tomate/h5>
-                        <p class="card-text">$189.00</p>
-                        <a href="#" class="btn btn-primary">Añadir al Carrito</a>
-                </div>
-            </div>
-            <div class="card margenImagen " style="width: 18rem;">
-                <img src="./imagenes/pure en lata.webp" class="card-img-top" alt="pure en lata">
-                <div class="card-body">
-                    <h5 class="card-title">Pure de tomate en Lata</h5>
-                    <p class="card-text">$205.00</p>
-                    <a href="#" class="btn btn-primary">Añadir al Carrito</a>
-                </div>
-            </div>
-            <div class="card margenImagen  " style="width: 18rem;">
-                <img src="./imagenes/vino tinto elementos.webp" class="card-img-top" alt="Vino tinto">
-                <div class="card-body">
-                    <h5 class="card-title">Vino tinto</h5>
-                    <p class="card-text">$1299.00 </p>
-                    <a href="#" class="btn btn-primary">Añadir al Carrito</a>
-                </div>
-            </div>
-            <div class="card margenImagen  " style="width: 18rem;">
-                <img src="./imagenes/yogut de frutilla.webp" class="card-img-top" alt="yogurt frutilla">
-                <div class="card-body">
-                    <h5 class="card-title">Yogurt sabor Frutilla</h5>
-                    <p class="card-text">$339.00</p>
-                    <a href="#" class=" btn btn-primary ">Añadir al Carrito</a>
-                </div>
-            </div>
-        </div>
-    </main>
+        </main>
 
 
 
 
-    <footer class="text-center bordeFooter">
-        <h3>Todos los Derechos Reservados</h3>
-        <ul>
-            <li><a href="https://www.youtube.com/">YouTube</a></li>
-            <li><a href="https://www.instagram.com/">Instagram</a></li>
-            <li><a href="https://www.facebook.com/">Facebook</a></li>
-        </ul>
-        <p>Sitio creado por Sebastian Casabona</p>
-    </footer>
+        <footer class="text-center bordeFooter">
+            <h3>Todos los Derechos Reservados</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/">YouTube</a></li>
+                <li><a href="https://www.instagram.com/">Instagram</a></li>
+                <li><a href="https://www.facebook.com/">Facebook</a></li>
+            </ul>
+            <p>Sitio creado por Sebastian Casabona</p>
+        </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
 </body>
 
 
